--- a/insta.html
+++ b/insta.html
@@ -2,33 +2,27 @@
 <html>
   <head>
     <title>Live Instagram Likes Count Search</title>
-     <style>
-body {
-  background-image: url('https://images.pexels.com/photos/255527/pexels-photo-255527.jpeg?auto=compress&cs=tinysrgb&w=600');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  }
-      /* Add some basic styles */
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
       body {
+        background-image: url('');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
         font-family: Arial, sans-serif;
         text-align: center;
       }
       h1 {
         margin-top: 50px;
+        color: red; /* changes the heading color to red */
       }
       #likes-count {
         font-size: 48px;
         margin-top: 20px;
       }
     </style>
-    <style>
-      h1 {
-        color: red; /* changes the heading color to red */
-      }
-    </style>
   </head>
-  <body>
    <p align="center">
   <img src="https://readme-typing-svg.herokuapp.com?font=Montserrat&size=30&duration=5001&color=green&vCenter=true&center=true&width=460&lines=WELCOME+TO+INSTAGRAM;+LIVE+LIKES+COUNT+;FOR+A+POST+;HAPPY+SEARCHING....!">
 </p>
